--- a/results/run-test-computer/15c.md
+++ b/results/run-test-computer/15c.md
@@ -1,3 +1,5 @@
 | Command | Mean [s] | Min [s] | Max [s] | Relative |
 |:---|---:|---:|---:|---:|
-| `normal_run` | 48.162 ± 0.511 | 47.402 | 49.031 | 1.00 |
+| `normal_run` | 48.376 ± 0.321 | 47.921 | 48.948 | 4.33 ± 0.04 |
+| `with_nested_loop_join` | 84.007 ± 7.836 | 70.483 | 96.454 | 7.52 ± 0.70 |
+| `with_hash_join` | 11.171 ± 0.063 | 11.084 | 11.276 | 1.00 |
