Remaining query results

--- a/results/run-test-computer/29c.md
+++ b/results/run-test-computer/29c.md
@@ -1,4 +1,4 @@
 | Command | Mean [s] | Min [s] | Max [s] | Relative |
 |:---|---:|---:|---:|---:|
-| `normal_run` | 13.711 ± 36.625 | 1.433 | 117.929 | 7.55 ± 20.50 |
-| `with_nested_loop_join` | 1.817 ± 0.899 | 0.772 | 2.990 | 1.00 |
+| `normal_run` | 2.462 ± 0.765 | 1.358 | 3.641 | 1.00 |
+| `with_nested_loop_join` | 4.884 ± 8.883 | 1.561 | 30.125 | 1.98 ± 3.66 |
